--- a/_sass/site/base/_typography.scss
+++ b/_sass/site/base/_typography.scss
@@ -1,5 +1,5 @@
 $font-family-primary: 'DM Sans', -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
-$font-family-secondary: 'Bitter', serif;
+$font-family-secondary: 'Alfa Slab One', cursive;
 
 html {
   font-family: sans-serif;
