--- a/css/styles.scss
+++ b/css/styles.scss
@@ -31,8 +31,8 @@
 
 @import "site/layouts/projects";
 @import "site/layouts/project";
-@import "site/layouts/fonts";
-// @import "site/layouts/font";
+@import "site/layouts/adsense";
+// @import "site/layouts/adsense";
 @import "site/layouts/about";
 @import "site/layouts/where-ive-been";
 @import "site/layouts/contact";
