--- a/css/styles.scss
+++ b/css/styles.scss
@@ -32,7 +32,7 @@
 @import "site/layouts/projects";
 @import "site/layouts/project";
 @import "site/layouts/adsense";
-// @import "site/layouts/adsense";
+// @import "site/layouts/adsenses";
 @import "site/layouts/about";
 @import "site/layouts/where-ive-been";
 @import "site/layouts/contact";
