--- a/_sass/site/base/_typography.scss
+++ b/_sass/site/base/_typography.scss
@@ -1,6 +1,6 @@
 $font-family-primary: 'DM Sans', -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
 $font-family-secondary: 'Alfa Slab One', cursive;
-@import url('https://adsense.googleapis.com/css2?family=Alfa+Slab+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap');
 
 html {
   font-family: sans-serif;
