--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -35,7 +35,7 @@ title-class: project
 
         {% if page.disciplines %}
         <div class="project-detail project-detail-6 project-detail-first">
-          <h3 class="title-label">Disciplines</h3>
+          <h3 class="title-label">Chi tiết liên hệ</h3>
           {% assign discipline_list = page.disciplines | split: ','  %}
 
           {% for discipline in discipline_list %}
@@ -46,7 +46,7 @@ title-class: project
 
           {% if page.time_period %}
           <div class="project-detail project-detail-6">
-            <h3 class="title-label">Year</h3>
+            <h3 class="title-label">Năm</h3>
             <p>{{ page.time_period }}</p>
           </div>
           {% endif %}
